/**
 * MIT License
 * Copyright (c) 2020 Fonoster Inc
 *
 * The Domains proto contains the artificats for domains administration
 */
syntax = "proto3";

package yaps.domains.v1alpha1;

import "common.proto";

service Domains {
  // Lists domains from the SIP Proxy subsystem
  rpc ListDomains (ListDomainsRequest) returns (ListDomainsResponse) {};
  // Creates a new Domain resource.
  rpc CreateDomain (CreateDomainRequest) returns (Domain) {};
  // Gets Domain using its reference
  rpc GetDomain (GetDomainRequest) returns (Domain) {};
  // Change or update fields in a resource
  rpc UpdateDomain (UpdateDomainRequest) returns (Domain) {};
  // Hard delete of a domain resource
  rpc DeleteDomain (DeleteDomainRequest) returns (yaps.common.v1alpha1.Empty) {};
}

message ListDomainsRequest {
  // The maximum number of items to return.
  int32 page_size = 1;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 2;

  // Level of detail of the individual entities
  yaps.common.v1alpha1.View view = 3;
}

message ListDomainsResponse {
  // There will be a maximum number of items returned based on the page_size field
  // in the request.
  repeated Domain domains = 1;

  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

message CreateDomainRequest {
  Domain domain = 1;
}

message UpdateDomainRequest {
  Domain domain = 1;
}

message GetDomainRequest {
  string ref = 1;
}

message DeleteDomainRequest {
  string ref = 1;
}

message Domain {
  string ref = 1;
  string name = 2;
  string domain_uri = 3;
  string egress_rule = 4;
  string egress_number_ref = 5;
  repeated string access_deny = 6;
  repeated string access_allow = 7;
  string create_time = 8;
  string update_time = 9;
}
